--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,10 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string-array name="positions_spinner_array">
+        <item>All</item>
+        <item>Active</item>
+        <item>Inactive</item>
+        <item>Closed</item>
+    </string-array>
 </resources>
